# shuvoice

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE-sherpa-tail-flush.md  LICENSE  PLAN-12-13-moonshine-fixes.md  PLAN-37-local-tts-wizard-followups.md  PLAN-asr-backend-adapters.md  PLAN-issue-12-moonshine-repetition-guard.md  PLAN-issue-13-moonshine-throughput.md  PLAN-issue-23-branding-image-optimization.md  PLAN-issue-24-aur-publishing.md  PLAN-nemo-gain-accuracy.md  PLAN-open-source-cleanup.md  PLAN-platform-refactor-reliability-roadmap.md  PLAN-sherpa-gpu-enable.md  PLAN-shuvoice-improvements.md  PLAN-shuvoice-production-hardening.md  PR_AUDIT.md  README.md  SECURITY.md  pyproject.toml  shuvoice-plan.md
.Jules/: palette.md
.factory/: init.sh  services.yaml
.factory/research/: melotts.md
.factory/skills/backend-worker/: SKILL.md
.factory/validation/melotts-backend/scrutiny/: synthesis-round1.json  synthesis.json
.factory/validation/melotts-backend/scrutiny/reviews/: melotts-backend-and-helper.json  melotts-config-registry.json  melotts-scrutiny-fixes.json  melotts-setup-automation.json  melotts-wizard-integration.json
.factory/validation/melotts-backend/user-testing/: synthesis.json
.factory/validation/melotts-backend/user-testing/flows/: backend.json  config.json  setup-cross.json  wizard.json
.github/workflows/: ci.yml
.jules/: sentinel.md
.rodney/: state.json
docs/: BRANDING.md
examples/: config-moonshine-cpu.toml  config-nemo-cpu.toml  config-nemo-cuda.toml  config-sherpa-cpu.toml  config-sherpa-cuda.toml  config-sherpa-parakeet-offline.toml  config-sherpa-parakeet-streaming.toml  config.toml  tts_roundtrip_phrases.txt  waybar-custom-shuvoice-wrapper.jsonc  waybar-custom-shuvoice.jsonc  waybar-shuvoice.css
packaging/: .SRCINFO  PKGBUILD  README.md
packaging/aur/: README.md
packaging/aur/python-sherpa-onnx-bin/: .SRCINFO  .gitignore  PKGBUILD  README.md
packaging/aur/sherpa-onnx-gcc15-fix/: PKGBUILD.diff  README.md
packaging/constraints/: py314-overrides.txt
packaging/systemd/user/: shuvoice.service
scripts/: check-env-hardcoding.sh  install-dev-links.sh  install-waybar-wrapper.sh  shuvoice-waybar.sh  shuvoice.sh  smoke-test.sh  tts_roundtrip.py  uninstall-waybar-wrapper.sh  validate-cli-help-sync.py  validate-doc-config-sync.py
shuvoice/: __init__.py  __main__.py  app.py  asr.py  asr_base.py  asr_moonshine.py  asr_nemo.py  asr_sherpa.py  audio.py  branding.py  config.py  config_io.py  config_migrations.py  control.py  diagnostics.py  env_loader.py  feedback.py  hotkey.py  melo_helper.py  metrics.py  overlay.py  overlay_state.py  piper_setup.py  postprocess.py  selection.py  setup_helpers.py  sherpa_cuda.py  splash.py  streaming_health.py  transcript.py  tts.py  tts_base.py  tts_elevenlabs.py  tts_local.py  tts_melotts.py  tts_openai.py  tts_overlay.py  tts_overlay_state.py  tts_player.py  tts_speed.py  (+5 more)
shuvoice/cli/: __init__.py  parser.py
shuvoice/cli/commands/: audio.py  common.py  config.py  control.py  diagnostics.py  model.py  preflight.py  run.py  setup.py  wizard.py
shuvoice/runtime/: __init__.py  chunk_pipeline.py  flush_policy.py  state_machine.py
shuvoice/waybar/: __init__.py  cli.py  format.py  hyprland.py  systemd.py
shuvoice/wizard/: __init__.py  actions.py  flow.py  hyprland.py  ui.py
tests/: conftest.py  test_app_flow.py  test_asr.py  test_asr_backends.py  test_asr_moonshine.py  test_asr_sherpa_offline.py  test_audio.py  test_backend_capabilities.py  test_branding.py  test_cli_commands_misc.py  test_cli_subcommands.py  test_config.py  test_config_io.py  test_config_migrations.py  test_config_validation.py  test_control.py  test_entrypoint_main.py  test_env_loader.py  test_feedback.py  test_hotkey.py  test_main_cli.py  test_metrics.py  test_overlay_accessibility.py  test_overlay_gui.py  test_overlay_state.py  test_packaging_service_unit.py  test_piper_setup.py  test_postprocess.py  test_run_command.py  test_runtime_chunk_pipeline.py  test_runtime_flush_policy.py  test_runtime_state_machine.py  test_security_logging.py  test_security_socket.py  test_selection.py  test_setup_command.py  test_setup_helpers.py  test_sherpa_cuda.py  test_splash.py  test_streaming_health.py  (+19 more)
tests/e2e/: test_ipc_smoke.py
tests/integration/: test_roundtrip_regression.py  test_sherpa_low_noise_regression.py
