[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shuvoice"
version = "0.1.0"
description = "Streaming speech-to-text overlay for Hyprland"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
dependencies = [
    "sounddevice",
    "numpy",
    "evdev",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
asr = [
    "torch>=2.4",
    "nemo-toolkit[asr]>=2.6.0",
]
dev = [
    "pytest>=8.0",
]

# Arch Linux notes:
# - Prefer system python-pytorch-cuda for GPU builds.
# - If nemo-toolkit wheels lag, install NeMo from git main:
#     pip install git+https://github.com/NVIDIA/NeMo.git@main#egg=nemo_toolkit[asr]
# - System packages:
#     gtk4 gtk4-layer-shell python-gobject python-pytorch-cuda
#     wtype wl-clipboard portaudio pipewire pipewire-audio pipewire-alsa

[project.scripts]
shuvoice = "shuvoice.__main__:main"

[project.urls]
Homepage = "https://github.com/shuv1337/shuvoice"
Repository = "https://github.com/shuv1337/shuvoice"

[tool.setuptools.packages.find]
include = ["shuvoice*"]
exclude = ["tests*", "packaging*", "scripts*", "examples*"]
