[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shuvoice"
version = "0.1.2"
description = "Streaming speech-to-text overlay for Hyprland"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "sounddevice",
    "numpy",
    "PyGObject>=3.50",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
asr = [
    "torch>=2.4",
    "nemo-toolkit[asr]>=2.6.0",
]
asr-nemo = [
    "torch>=2.4",
    "nemo-toolkit[asr]>=2.6.0",
]
asr-sherpa = [
    "sherpa-onnx",
]
asr-moonshine = [
    "useful-moonshine-onnx",
]
tts-elevenlabs = []
tts-local = []
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "coverage>=7.0",
    "ruff>=0.9",
]

# Arch Linux notes:
# - Prefer system python-pytorch-cuda for GPU builds.
# - If nemo-toolkit wheels lag, install NeMo from git main:
#     uv pip install git+https://github.com/NVIDIA/NeMo.git@main#egg=nemo_toolkit[asr]
# - System packages:
#     gtk4 gtk4-layer-shell python-gobject python-pytorch-cuda
#     wtype wl-clipboard portaudio pipewire pipewire-audio pipewire-alsa

[project.scripts]
shuvoice = "shuvoice.__main__:main"
shuvoice-waybar = "shuvoice.waybar:main"

[project.urls]
Homepage = "https://github.com/shuv1337/shuvoice"
Repository = "https://github.com/shuv1337/shuvoice"

[tool.hatch.build.targets.wheel]
packages = ["shuvoice"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

# Python 3.14 compatibility: pin kaldialign to avoid source-build issues.
# Apply with: uv sync --extra asr-nemo --override packaging/constraints/py314-overrides.txt

[tool.pytest.ini_options]
markers = [
    "unit: headless-safe default test tier",
    "gui: tests that require GTK/GI runtime",
    "integration: deterministic backend regression tests (opt-in)",
    "gpu: tests that require CUDA/GPU runtime",
    "e2e: subprocess/socket end-to-end tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"shuvoice/app.py" = ["E402"]
"shuvoice/overlay.py" = ["E402"]
"shuvoice/tts_overlay.py" = ["E402", "I001"]
"shuvoice/splash.py" = ["E402"]
"shuvoice/wizard/__init__.py" = ["E402", "I001"]
"shuvoice/wizard/ui.py" = ["E402"]
"scripts/tts_roundtrip.py" = ["E402"]
"tests/test_splash.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
